--- a/index.html
+++ b/index.html
@@ -2,11 +2,46 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="styleshsst" href="./css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Landing Page</title>
     </head>
     <body>
-        
+        <div class="container">
+            <header>
+                <a href="#">
+                    <img src="./images/logo.png" class="logo">
+                </a>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Contact</a></li>
+
+                </ul>
+            </header>
+            <div class="content">
+                <div class="text">
+                    <h2>iphone Products</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Hic explicabo ut modi. 
+                        Quasi, repellat maxime.
+                    </p>
+                    <a href="#">All Products</a>
+                </div>
+                <div class="image">
+                    <img class="mainImg" src="./images/0.png" alt="">
+                </div>
+            </div>
+            <div class="icons">
+                <img onclick=" changePhone(this.src); changeBackground('#7D9D9C')" src="./images/0.png">
+                <img onclick=" changePhone(this.src); changeBackground('#247ec8')" src="./images/1.png">
+                <img onclick=" changePhone(this.src); changeBackground('#7D9D9C')" src="./images/2.png">
+                <img onclick=" changePhone(this.src); changeBackground('#c79b53')" src="./images/3.png">
+                <img onclick=" changePhone(this.src); changeBackground('#EB1D36')" src="./images/4.png">
+
+            </div>
+        </div>
         <script src="./js/main.js"></script>
     </body>
 </html>
